--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "nicegui>=3.2.0",
+    "plotly>=6.4.0",
     "pyyaml>=6.0.3",
 ]
 
